# TDS-Virtual-Teaching-Assistant

./: README.md  package-lock.json  package.json  project-tds-virtual-ta-promptfoo.yaml  pyproject.toml  requirements.txt
app/: content_processor.py  discourse_scrapper.py  embed_and_store.py  main.py
processed_data/: tds-course-content.json
rawdata/discourse_contents/: discourse-posts.json
vectorstore/: tds_faiss_meta.json
